force-app/main/default/objects/Follow__c/Follow__c.object-meta.xml
<CustomObject>
    <description>Objeto que registra la suscripción de un usuario con un Account, Opportunity, etc</description>
    <label>Follow</label>
    <nameField>
        <displayFormat>FW-{00000000}</displayFormat>
        <label>Follow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Follows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>