force-app/main/default/objects/Follow__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cuenta a la que se ha suscrito el usuario</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Follows</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>