force-app/main/default/objects/Follow__c/fields/AccountActivity__c.field-meta.xml
<CustomField>
    <fullName>AccountActivity__c</fullName>
    <formula>Account__r.Activity__c</formula>
    <label>Account Activity</label>
    <type>Text</type>
</CustomField>