force-app/main/default/objects/Follow__c/fields/AccountActivityDate__c.field-meta.xml
<CustomField>
    <fullName>AccountActivityDate__c</fullName>
    <formula>Account__r.Last_Activity_Date__c</formula>
    <label>Account Activity Date</label>
    <type>DateTime</type>
</CustomField>