force-app/main/default/objects/Follow__c/fields/AccountClassification__c.field-meta.xml
<CustomField>
    <fullName>AccountClassification__c</fullName>
    <formula>TEXT(Account__r.Account_Classification__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Classification</label>
    <type>Text</type>
</CustomField>