force-app/main/default/objects/Follow__c/fields/AccountCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>AccountCreatedDate__c</fullName>
    <formula>Account__r.CreatedDate</formula>
    <label>Account Created Date</label>
    <type>DateTime</type>
</CustomField>