force-app/main/default/objects/Follow__c/fields/AccountOwnerSalesOrg__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerSalesOrg__c</fullName>
    <formula>TEXT(Account__r.Owner.Default_Sales_Organization__c)</formula>
    <label>Account Owner Sales Org</label>
    <type>Text</type>
</CustomField>