force-app/main/default/objects/Follow__c/fields/AccountSapId__c.field-meta.xml
<CustomField>
    <fullName>AccountSapId__c</fullName>
    <formula>Account__r.SAP_Id__c</formula>
    <label>Account Sap Id</label>
    <type>Text</type>
</CustomField>