force-app/main/default/objects/Follow__c/fields/ActivityId__c.field-meta.xml
<CustomField>
    <fullName>ActivityId__c</fullName>
    <description>Id of the Activity. Can be a Task or an Event</description>
    <label>Activity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>