force-app/main/default/objects/Follow__c/fields/ActivityLink__c.field-meta.xml
<CustomField>
    <fullName>ActivityLink__c</fullName>
    <formula>HYPERLINK((&quot;/&quot; +  ActivityId__c) ,  ActivitySubject__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Link</label>
    <type>Text</type>
</CustomField>