force-app/main/default/objects/Follow__c/fields/ActivitySubject__c.field-meta.xml
<CustomField>
    <fullName>ActivitySubject__c</fullName>
    <description>Subject of the Task or Event</description>
    <label>Activity Subject</label>
    <length>250</length>
    <type>Text</type>
</CustomField>