force-app/main/default/objects/Follow__c/fields/EventEndDate__c.field-meta.xml
<CustomField>
    <fullName>EventEndDate__c</fullName>
    <label>Event End Date</label>
    <type>DateTime</type>
</CustomField>