force-app/main/default/objects/Follow__c/fields/EventId__c.field-meta.xml
<CustomField>
    <fullName>EventId__c</fullName>
    <description>Id of the event followd</description>
    <label>Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>