force-app/main/default/objects/Follow__c/fields/EventStartDate__c.field-meta.xml
<CustomField>
    <fullName>EventStartDate__c</fullName>
    <label>Event Start Date</label>
    <type>DateTime</type>
</CustomField>