force-app/main/default/objects/Follow__c/fields/OpportunityActivity__c.field-meta.xml
<CustomField>
    <fullName>OpportunityActivity__c</fullName>
    <formula>Opportunity__r.Activity__c</formula>
    <label>Opportunity Activity</label>
    <type>Text</type>
</CustomField>