force-app/main/default/objects/Follow__c/fields/OpportunityCloseDate__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCloseDate__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>