force-app/main/default/objects/Follow__c/fields/OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityName__c</fullName>
    <formula>Opportunity__r.Name</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>