force-app/main/default/objects/Follow__c/fields/OpportunityOwnerSalesOrg__c.field-meta.xml
<CustomField>
    <fullName>OpportunityOwnerSalesOrg__c</fullName>
    <formula>TEXT(Opportunity__r.Owner.Default_Sales_Organization__c)</formula>
    <label>Opportunity Owner Sales Org</label>
    <type>Text</type>
</CustomField>