force-app/main/default/objects/Follow__c/fields/OpportunityStage__c.field-meta.xml
<CustomField>
    <fullName>OpportunityStage__c</fullName>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>