force-app/main/default/objects/Follow__c/fields/OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OpportunityType__c</fullName>
    <formula>TEXT(Opportunity__r.Opportunity_Classification__c)</formula>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>