force-app/main/default/objects/Follow__c/fields/PersonAccount__c.field-meta.xml
<CustomField>
    <fullName>PersonAccount__c</fullName>
    <formula>Account__r.IsPersonAccount</formula>
    <label>Person Account</label>
    <type>Checkbox</type>
</CustomField>