force-app/main/default/objects/Follow__c/fields/TaskDate__c.field-meta.xml
<CustomField>
    <fullName>TaskDate__c</fullName>
    <label>Task Date</label>
    <type>Date</type>
</CustomField>