force-app/main/default/objects/Follow__c/fields/TaskId__c.field-meta.xml
<CustomField>
    <fullName>TaskId__c</fullName>
    <description>Id of the Task followed</description>
    <label>Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>