force-app/main/default/objects/Follow__c/recordTypes/Account.recordType-meta.xml
<RecordType>
    <fullName>Account</fullName>
    <active>true</active>
    <description>RecordType para Follow de Account</description>
    <label>Account</label>
</RecordType>