force-app/main/default/objects/Follow__c/recordTypes/Event.recordType-meta.xml
<RecordType>
    <fullName>Event</fullName>
    <active>true</active>
    <description>Recordtype para Follow de Eventos</description>
    <label>Event</label>
</RecordType>