force-app/main/default/objects/Follow__c/recordTypes/Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Opportunity</fullName>
    <active>true</active>
    <description>Recordtype para Follow de Opportunity</description>
    <label>Opportunity</label>
</RecordType>