force-app/main/default/objects/Follow__c/recordTypes/Task.recordType-meta.xml
<RecordType>
    <fullName>Task</fullName>
    <active>true</active>
    <description>Record type para Follow de Tasks</description>
    <label>Task</label>
</RecordType>