force-app/main/default/objects/Follow__c/listViews/AU_Followed_Accounts.listView-meta.xml
<ListView>
    <fullName>AU_Followed_Accounts</fullName>
    <booleanFilter>1 AND 3 AND (2 OR 4)</booleanFilter>
    <columns>Account__c</columns>
    <columns>AccountSapId__c</columns>
    <columns>AccountActivity__c</columns>
    <columns>PersonAccount__c</columns>
    <columns>AccountOwnerSalesOrg__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Follow__c.Account</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>ssega</value>
    </filters>
    <filters>
        <field>AccountOwnerSalesOrg__c</field>
        <operation>equals</operation>
        <value>850</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>JB</value>
    </filters>
    <label>AU Followed Accounts</label>
</ListView>