force-app/main/default/objects/Follow__c/listViews/Australia_Followed_Events.listView-meta.xml
<ListView>
    <fullName>Australia_Followed_Events</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>ActivityLink__c</columns>
    <columns>EventStartDate__c</columns>
    <columns>EventEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Follow__c.Event</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>contains</operation>
        <value>sseg</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>JB</value>
    </filters>
    <filters>
        <field>AccountOwnerSalesOrg__c</field>
        <operation>equals</operation>
        <value>850</value>
    </filters>
    <label>Australia Followed Events</label>
</ListView>