force-app/main/default/objects/Follow__c/listViews/Australia_Followed_Tasks.listView-meta.xml
<ListView>
    <fullName>Australia_Followed_Tasks</fullName>
    <booleanFilter>1 AND (3 OR 4) AND 2</booleanFilter>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>ActivityLink__c</columns>
    <columns>EventStartDate__c</columns>
    <columns>EventEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Follow__c.Task</value>
    </filters>
    <filters>
        <field>AccountOwnerSalesOrg__c</field>
        <operation>equals</operation>
        <value>850</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>ssega</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>JB</value>
    </filters>
    <label>Australia Followed Tasks</label>
</ListView>