force-app/main/default/objects/Follow__c/listViews/Copy_of_UK_Followed_Events_Midlands.listView-meta.xml
<ListView>
    <fullName>Copy_of_UK_Followed_Events_Midlands</fullName>
    <booleanFilter>1 AND (4 OR 5) AND (2 OR 3)</booleanFilter>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>ActivityLink__c</columns>
    <columns>EventStartDate__c</columns>
    <columns>EventEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Follow__c.Event</value>
    </filters>
    <filters>
        <field>AccountOwnerSalesOrg__c</field>
        <operation>equals</operation>
        <value>516</value>
    </filters>
    <filters>
        <field>OpportunityOwnerSalesOrg__c</field>
        <operation>equals</operation>
        <value>516</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>ssega</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>JB</value>
    </filters>
    <label>UK Followed Events - Scotland</label>
</ListView>