force-app/main/default/objects/Follow__c/listViews/France_Followed_Accounts.listView-meta.xml
<ListView>
    <fullName>France_Followed_Accounts</fullName>
    <booleanFilter>1 AND (2 OR 4) AND 3 AND 5</booleanFilter>
    <columns>Account__c</columns>
    <columns>AccountSapId__c</columns>
    <columns>AccountActivity__c</columns>
    <columns>PersonAccount__c</columns>
    <columns>AccountOwnerSalesOrg__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Follow__c.Account</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>contains</operation>
        <value>sseg</value>
    </filters>
    <filters>
        <field>AccountOwnerSalesOrg__c</field>
        <operation>greaterThan</operation>
        <value>200</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>PSimar</value>
    </filters>
    <filters>
        <field>AccountOwnerSalesOrg__c</field>
        <operation>lessOrEqual</operation>
        <value>250</value>
    </filters>
    <label>France Followed Accounts</label>
</ListView>