force-app/main/default/objects/Follow__c/listViews/France_Followed_Events.listView-meta.xml
<ListView>
    <fullName>France_Followed_Events</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4 AND 5</booleanFilter>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>ActivityLink__c</columns>
    <columns>EventStartDate__c</columns>
    <columns>EventEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Follow__c.Event</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>contains</operation>
        <value>sseg</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>PSimar</value>
    </filters>
    <filters>
        <field>AccountOwnerSalesOrg__c</field>
        <operation>greaterThan</operation>
        <value>200</value>
    </filters>
    <filters>
        <field>AccountOwnerSalesOrg__c</field>
        <operation>lessOrEqual</operation>
        <value>250</value>
    </filters>
    <label>France Followed Events</label>
</ListView>