force-app/main/default/objects/Follow__c/listViews/France_Followed_Tasks.listView-meta.xml
<ListView>
    <fullName>France_Followed_Tasks</fullName>
    <booleanFilter>1 AND (2 OR 5) AND 3 AND 4</booleanFilter>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>ActivityLink__c</columns>
    <columns>TaskDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Follow__c.Task</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>contains</operation>
        <value>sseg</value>
    </filters>
    <filters>
        <field>AccountOwnerSalesOrg__c</field>
        <operation>greaterThan</operation>
        <value>200</value>
    </filters>
    <filters>
        <field>AccountOwnerSalesOrg__c</field>
        <operation>lessOrEqual</operation>
        <value>250</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>PSimar</value>
    </filters>
    <label>France Followed Tasks</label>
</ListView>