force-app/main/default/objects/Follow__c/listViews/My_Followed_Accounts.listView-meta.xml
<ListView>
    <fullName>My_Followed_Accounts</fullName>
    <columns>Account__c</columns>
    <columns>AccountSapId__c</columns>
    <columns>AccountActivity__c</columns>
    <columns>PersonAccount__c</columns>
    <columns>AccountOwnerSalesOrg__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Follow__c.Account</value>
    </filters>
    <label>My Followed Accounts</label>
</ListView>